--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+
+
+
 .container {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+    grid-template-columns: repeat(var(--grid-cols), auto);
+    grid-template-rows: repeat(var(--grid-rows), auto); /*auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;*/
     justify-content: center;
     align-content: center;
     gap: 0.5px;
