--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
+body {
+    background-color: rgb(231, 212, 212); 
+}
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(var(--grid-cols), auto);
-    grid-template-rows: repeat(var(--grid-rows), auto); /*auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;*/
+.grid-container {
+    display: flex;
     justify-content: center;
-    align-content: center;
+    
+}
+
+.grid {
+    width: 700px;
+    height: 700px;
+    display: grid;
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    grid-template-rows: repeat(var(--grid-rows), 1fr); 
     gap: 0.5px;
+    box-shadow: 10px 10px 10px grey;
     
 }   
 
 
 .item {
     border: 0.5px solid black;
-    height: 40px;
-    width: 40px;
+    background-color: whitesmoke;
 }
 
 .header {
@@ -25,7 +34,3 @@
     justify-content: center;
     margin-bottom: 20px;
 }
-
-/*.item:hover {
-    background-color: black;
-}*/
